<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/labelCoin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/theCrypto"
        android:textColor="@color/colorLilac"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/slash"
        app:layout_constraintTop_toTopOf="@id/slash"
        app:layout_constraintBottom_toBottomOf="@id/slash"/>

    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/slash"
        android:textColor="@color/colorBlack"
        android:textSize="42dp"
        app:layout_constraintEnd_toEndOf="@id/labelCoin"
        app:layout_constraintStart_toEndOf="@id/tvFromSymbol"
        app:layout_constraintStart_toStartOf="@id/labelCoin"
        app:layout_constraintTop_toBottomOf="@id/labelCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/theMoney"
        android:textColor="@color/colorFireOrange"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/slash"
        app:layout_constraintTop_toTopOf="@id/slash"
        app:layout_constraintBottom_toBottomOf="@id/slash" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slash"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tvPriceLabe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/price"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="7823"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@id/tvPriceLabe"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabe" />

            <TextView
                android:id="@+id/tvPriceMinForDayLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/minimalForDay"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view" />

            <TextView
                android:id="@+id/tvPriceMinForDayCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="7011"
                android:textColor="@color/colorFireRed"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@id/tvPriceMinForDayLabel"
                app:layout_constraintTop_toTopOf="@id/view" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/tvPriceMinForDayLabel" />

            <TextView
                android:id="@+id/tvPriceMaxForDayLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/maxForDay"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view1" />

            <TextView
                android:id="@+id/tvPriceMaxForDayCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="7911"
                android:textColor="@color/colorGreen"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@id/tvPriceMaxForDayLabel"
                app:layout_constraintTop_toTopOf="@id/view1" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/tvPriceMaxForDayLabel" />

            <TextView
                android:id="@+id/tvLastDealLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/theLastDeal"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view2" />

            <TextView
                android:id="@+id/tvLastDeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Bitrix"
                android:textSize="20dp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@id/tvLastDealLabel"
                app:layout_constraintTop_toTopOf="@id/view2" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/tvLastDealLabel" />

            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/theLastUpdate"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view3" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="00:00:00"
                android:textSize="20dp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@id/tvUpdate"
                app:layout_constraintTop_toTopOf="@id/view3" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>